first implementation of SoilErosion Algorithm. RasterTable nz_woody_lookup parsing is still failing...
git-svn-id: http://tikouka.googlecode.com/svn/trunk/52n-wps-tikouka@8 88633496-3efa-8c45-26c6-2b4ef57d3061

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <includes>
-                        <include>org/n52/wps/**</include>
+                        <!--<include>org/n52/wps/**</include>-->
+                        <include>tikouka/nl/wps/**</include>
                     </includes>
                     <source>1.5</source>
                     <target>1.5</target>
@@ -66,5 +67,10 @@
   		<artifactId>52n-wps-commons</artifactId>
                 <version>${project.version}</version>
       </dependency>
+      <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6</version>
+	</dependency>
   </dependencies>
 </project>
