--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
   <parent>
     <artifactId>52n-wps-parent</artifactId>
     <groupId>org.n52.wps</groupId>
-    <version>2.0-rc5-SNAPSHOT</version>
+    <version>2.0-RC6-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <!--<groupId>tikouka.nl.wps</groupId>-->
   <artifactId>52n-wps-tikouka</artifactId>
-  <version>2.0-rc5-SNAPSHOT</version>
+  <version>2.0-RC6-SNAPSHOT</version>
   <name>52n-wps-tikouka</name>
-    <description>The project 52 north 52n-wps-tikouka has e-Framework Soil Demonstrator algorithms.</description>
+    <description>52n-wps-tikouka has e-Framework Soil Demonstrator algorithms.</description>
     <build>
         <resources>
             <resource>
@@ -74,3 +74,4 @@
 	</dependency>
   </dependencies>
 </project>
+
