--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,15 @@
                 <version>${project.version}</version>
       </dependency>
       <dependency>
+          <groupId>org.geotools</groupId>
+          <artifactId>gt-process</artifactId>
+          <version>2.6.1</version>
+      </dependency>
+      <!--<dependency>
             <groupId>dom4j</groupId>
             <artifactId>dom4j</artifactId>
             <version>1.6</version>
-	</dependency>
+	</dependency>-->
   </dependencies>
 </project>
 
